<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Green Development</string>
    <string name="action_settings">Settings</string>
	<string-array name="speed">
        <item>12 Seconds</item>
        <item>15 Seconds</item>
        <item>18 Seconds</item>
        <item>21 Seconds</item>
        <item>30 Seconds</item>
    </string-array>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splashscreen">Green Development</string>
    <string name="main">Green Development</string>
    <string name="capture">Capture</string>
    <string name="Capture2">Capture</string>
    <string name="Recapture">Recapture</string><string name="Upload">Save Gesture</string>
    <string name="picture">Picture</string>
    <string name="Exit">Exit</string>
    <string name="settings">Settings</string>
     <string name="save">Save</string>
    <string name="space"></string>
    <string name="learn">Learn Sign</string>
    <string name="fullname">Full Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="agree">End User Agreement</string>
    <string name="enduserinfo">End User Information</string>
    <string name="next">Next</string>
    <string name="equipsol">Equipment or solutions provided</string>
    <string name="ethanolstv">Ethanol Stove</string>
    <string name="biogasstv">Biogas Stove</string>
    <string name="purifiedstv">Purified Water</string>
    <string name="partsupp">Project Implementation Partner/ Supplier of Solutions</string>
    <string name="org">Organization</string>
    <string name="personresp">Person responsible for filling in the form</string>
    <string name="cdmprojarea">CDM Project Area</string>
    <string name="termone">1. The equipment supplied is provided as part of a CDM Program and that the household is a Project Participating household under the \"POA for the Reduction of emission from non-renewable fuel from cooking household level\" and that the equipment and solutions provided is subsidized with the income from the carbon credits generated.</string>
    <string name="termtwo">2. The carbon credits generated from the solutions belong to Green Development AS.</string>
    <string name="termthree">3. The household is not part of any other program or project in which carbon credits are generated for the same solutions as provided through this program.</string>
    <string name="termfour">4. Prior to receiving the equipment or solutions referred to in this contract, the household has been using woody biomass for cooking and would have continued to do so without the carbon credit program. </string>
    <string name="termfive">5. Households that get purified water as part of this program, confirm that they have been boiling their water prior to receiving the purified water as part of this program and that they would have continued to do so in the absence of the carbon credit program. </string> 
    <string name="takesurvey">Take Survey</string>
    <string name="submit">Submit</string>
    <string name="cd">Content Description</string>
    <string name="enduseragree">End User Agreement</string>
    <string name="intro">For solutions provided as part of the PoA for the reduction of emission from non-renewable fuel from cooking at household level</string>
    <string name="area">Area</string>
    <string name="termsofcontract">Terms of the contract</string>
    <string name="understood">It is understood and agreed that the following statements are correct:</string>
    <string name="signature">Signature</string>
    <string name="manage">Manage Surveys</string>
    <string name="config">User Configurations</string>
    <string name="takepic">Take Picture</string>
    <string name="yes">Yes</string>
    <string name="not">No</string>
    <string name="savesuccess">Survey saved successfully!</string>
    <string name="country">Country</string>
    <string name="respondent">Respondent</string>
    <string name="submits">Submit Surveys</string>
    <string name="gps">Gps Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="fetchgps">Fetch GPS</string>
    <string name="gpsloc">Global Positioning System</string>
    <string name="delete">Delete</string>
    <string name="disabled">disabled</string>
    <string name="light_bulb">This should be a light bulb!</string>
    <string name="custom">Custom switch texts:</string>
    <string name="light">The light is: </string>
    <string name="textOn">Yes</string>
    <string name="textOff">No</string>
     <string name="edit">Edit</string>
    <string name="pending">No Pending Survey(s) Found</string>
    <string name="upload_success">Responses successfully recorded in the cloud</string>
    
    
</resources>
