<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res/de.ankri.switchtest" 
    >

   <de.ankri.views.Switch
        android:id="@+id/switchEthanolstv"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/goblinGreen"
        android:text="@string/ethanolstv"
        android:textOff="@string/not"
        android:textOn="@string/yes"
        android:textSize="@dimen/lvHeadingTextSize" 
        />
		
		<de.ankri.views.Switch
       android:id="@+id/switchBiogasstv"       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/goblinGreen"
        android:text="@string/biogasstv"
        android:textOff="@string/not"
        android:textOn="@string/yes"
        android:textSize="@dimen/lvHeadingTextSize" 
        />

		<de.ankri.views.Switch
        android:id="@+id/switchPurifiedwater"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/goblinGreen"
        android:text="@string/purifiedstv"
        android:textOff="@string/not"
        android:textOn="@string/yes"
        android:textSize="@dimen/lvHeadingTextSize" 
        />
        

</LinearLayout>
